--- a/Views/Catalogue/Index.cshtml
+++ b/Views/Catalogue/Index.cshtml
@@ -14,11 +14,14 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- You can access the library view model items via the list in Item Index Model-->
                 @foreach (var item in Model.Items)
                 {
                     <tr class="item-row">
-                        <td><img src="@item.ImageUrl" class="image-cell"/></td>
+                        <td>
+                            <a asp-controller="Catalogue" asp-action="Detail" asp-route-id="@item.Id">
+                                <img src="@item.ImageUrl" class="image-cell"/>
+                            </a>
+                        </td>
                         <td>@item.Title</td>
                         <td>@item.AuthorOrDirector</td>
                         <td>@item.Type</td>
