--- a/Views/Catalogue/Index.cshtml
+++ b/Views/Catalogue/Index.cshtml
@@ -1,33 +1,26 @@
 ﻿<!-- tell the View which model you are passing it-->
 @model Library.ViewModels.Catalogue.ItemIndexModel
 
-<div id="items">
-    <h2>Welcome to the Library Catalogue!</h2>
-    <div class="items-table">
-        <table class="items-table table-condensed" id="catalogue-index-table">
-            <thead>
-                <tr>
-                    <th>Image</th>
-                    <th>Title</th>
-                    <th>Author/Director</th>
-                    <th>Item Type</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model.Items)
-                {
-                    <tr class="item-row">
-                        <td>
-                            <a asp-controller="Catalogue" asp-action="Detail" asp-route-id="@item.Id">
-                                <img src="@item.ImageUrl" class="image-cell"/>
-                            </a>
-                        </td>
-                        <td>@item.Title</td>
-                        <td>@item.AuthorOrDirector</td>
-                        <td>@item.Type</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+<div class="row">
+    <div class="col-lg-12">
+        <h2>Welcome to the Library Catalogue!</h2>
+        <h3>The date is @DateTime.Now</h3>
     </div>
 </div>
+<div class="row text-center">
+    @foreach (var item in Model.Items)
+    {
+        <div class="col-md-3 col-sm-6">
+            <div class="thumbnail">
+                <img src="@item.ImageUrl" class="item-image"/>
+                <div class="caption">
+                    <h4>@item.Title</h4>
+                    <a asp-controller="Catalogue" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-primary">More Info</a>
+                </div>
+            </div>
+        </div>
+    }
+</div>
+            
+       
+
